--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
     "@radix-ui/react-menubar": "^1.1.15",
+    "@tabler/icons-react": "^3.34.0",
     "@tailwindcss/vite": "^4.1.11",
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
