--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@material-tailwind/react": "^2.1.10",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-menubar": "^1.1.15",
     "@tabler/icons-react": "^3.34.0",
     "@tailwindcss/vite": "^4.1.11",
@@ -28,6 +30,7 @@
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.3",
+    "sweetalert2": "^11.22.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   },
