--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.3",
+    "react-scroll": "^1.9.3",
     "sweetalert2": "^11.22.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
