--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^12.19.2",
     "lucide-react": "^0.525.0",
     "motion": "^12.19.2",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-fast-marquee": "^1.6.5",
@@ -31,6 +32,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.6.3",
     "react-scroll": "^1.9.3",
+    "sonner": "^2.0.6",
     "sweetalert2": "^11.22.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
